--- a/gdrive_metadata_request.ipynb
+++ b/gdrive_metadata_request.ipynb
@@ -29,10 +29,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### generate dictionary of parent folders for ILPs\n",
+    "### generate dictionary of parent folders\n",
     "\n",
     "#for this example, there is only one folder in the list\n",
-    "folderList = {'FILE NAME' : 'FILE ID'}"
+    "folderList = {'FOLDER NAME' : 'FOLDER ID'}"
    ]
   },
   {
@@ -196,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df50.to_csv('snapshot_files.csv')"
+    "df50.to_csv('files_list.csv')"
    ]
   }
  ],
