--- a/shopify_orders.ipynb
+++ b/shopify_orders.ipynb
@@ -74,6 +74,7 @@
     "    orders = pd.DataFrame()\n",
     "    while True:\n",
     "        response = requests.request(\"GET\", url)\n",
+    "        # use json_normalize to extract the fields we need for this use case\n",
     "        df = pd.json_normalize(response.json()['orders'], record_path =['line_items'], meta=[\n",
     "            'id','discount_applications',['customer','id'],['customer','default_address','name'],'contact_email','email', \n",
     "            ['customer','default_address','phone'],['customer','orders_count'],['customer','total_spent'],\n",
