cleaned up variable names

--- a/gdrive_metadata_request.ipynb
+++ b/gdrive_metadata_request.ipynb
@@ -158,7 +158,7 @@
     "### function to generate DataFrame with all sheets in a given file\n",
     "\n",
     "def dfOfWkbks(wBook,wSheet,iCount):\n",
-    "    dfWBook = pd.DataFrame(columns=['name','id','parent','file_name'])\n",
+    "    dfWBook = pd.DataFrame(columns=['name','id','parent','sheet_name'])\n",
     "    dfWBook = dfWBook.assign(file_name=lambda x: wSheet)\n",
     "    dfWBook = dfWBook.assign(name=lambda x: wBook['index'].iloc[iCount])\n",
     "    dfWBook = dfWBook.assign(id=lambda x: wBook['id'].iloc[iCount])\n",
@@ -186,8 +186,8 @@
     "        if iCount == len(dfOfFiles):\n",
     "            return(df40)\n",
     "\n",
-    "df50 = makeList(df2)\n",
-    "df50.shape\n"
+    "dfFinal = makeList(df2)\n",
+    "dfFinal.shape\n"
    ]
   },
   {
@@ -196,7 +196,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df50.to_csv('files_list.csv')"
+    "### output file name list for use in next stage\n",
+    "\n",
+    "dfFinal.to_csv('files_list.csv')"
    ]
   }
  ],
