update file name handling

--- a/gdrive_metadata_request.ipynb
+++ b/gdrive_metadata_request.ipynb
@@ -12,6 +12,8 @@
     "\n",
     "from __future__ import print_function\n",
     "\n",
+    "from datetime import date\n",
+    "\n",
     "import os.path\n",
     "\n",
     "import pygsheets\n",
@@ -196,9 +198,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### output file name list for use in next stage\n",
+    "### outputs csv with file name, file id, parent folder id, and sheet name for all files\n",
     "\n",
-    "dfFinal.to_csv('files_list.csv')"
+    "# there are a number of manual steps to prepare the 'snapshot_file' data for use\n",
+    "# in XYZ.ipynb. it is useful to keep a record of the manual data from past runs\n",
+    "# so we write a new file name for each time we run the script\n",
+    "\n",
+    "# create variable for today's date\n",
+    "today = date.today()\n",
+    "\n",
+    "# create a filename including today's date\n",
+    "name = 'snapshot_file_' + str(today) + '.csv'\n",
+    "\n",
+    "# create filename with today's date\n",
+    "dfFinal.to_csv(name)"
    ]
   }
  ],
