update file name handling

--- a/gdrive_metadata_request.ipynb
+++ b/gdrive_metadata_request.ipynb
@@ -208,7 +208,7 @@
     "today = date.today()\n",
     "\n",
     "# create a filename including today's date\n",
-    "name = 'snapshot_file_' + str(today) + '.csv'\n",
+    "name = 'files_list' + str(today) + '.csv'\n",
     "\n",
     "# create filename with today's date\n",
     "dfFinal.to_csv(name)"
