--- a/gdrive_metadata_request.ipynb
+++ b/gdrive_metadata_request.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### variation on code to return list of files\n",
+    "### variation on quickstart code to return list of files\n",
     "\n",
     "# define scope - by convention this variable is SCOPES\n",
     "SCOPES = ['https://www.googleapis.com/auth/drive.metadata.readonly']\n",
@@ -200,8 +200,8 @@
    "source": [
     "### outputs csv with file name, file id, parent folder id, and sheet name for all files\n",
     "\n",
-    "# there are a number of manual steps to prepare the 'snapshot_file' data for use\n",
-    "# in XYZ.ipynb. it is useful to keep a record of the manual data from past runs\n",
+    "# there are a number of manual steps to prepare the 'file_list' data for use\n",
+    "# in gdrive_interview_data_export.ipynb. it is useful to keep a record of the manual data from past runs\n",
     "# so we write a new file name for each time we run the script\n",
     "\n",
     "# create variable for today's date\n",
